2018-05-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove aide.spec.in

2017-11-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix root_prefix option

2017-10-29 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix short form of --limit parameter

2016-07-25 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release version 0.16

2016-07-11 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix example aide.conf (xattr -> xattrs)
	* aide.conf.5: update "SELECTION LINES" section
	* Released version 0.16rc1

2016-07-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix compilation with latest libaudit
	* Use AC_PROG_CC_C99 instead of AC_PROG_CC
	* Add AM_PROG_CC_C_O
	* aide.conf.in: logfile -> file
	* Update README
	* Update manual pages (aide.1 and aide.conf.5)

2016-07-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adapt manual to version 0.16

2016-06-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing break statements

2016-04-15 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Released version 0.16b1

2016-04-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix spelling errors
	* Makefile.am: fix distribution of doc files

2016-04-11 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'report_ignore_changed_attrs' option, deprecate 'ignore_list' option
	* Add 'report_force_attrs' option, deprecate 'report_attributes'
	  option

2016-04-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix some compiler warnings

2016-04-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Support restricted selection lines

2016-04-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust file type letters

2016-03-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Change verbosity levels to ease debugging

2016-03-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix '.*'-rule matching and code cleanup

2016-03-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix compilation issue with e2fsprogs 1.43
